Ch7-Logging-and-monitoring/Deploying-ELK/kibana-dedicated-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: kibana
  name: kibana-dedicated
